    then set 'BridgeRelay 1' when configuring their bridge.
  o Don't save a randomly generated control password to Vidalia's
    configuration file. If Vidalia gets disconnected from Tor or crashes, we
    will no longer be able to reconnect.
  o Don't let users save an empty string for a Tor executable in the Settings
    dialog.
  o Old Jabber clients apparently use port 5223 for encrypted connections. So,
    include that port as part of the "Instant Messaging" exit policy checkbox.
    (Ticket #333)
  o Stop displaying flags next to the language names in the Appearance
    settings page.
  o Add a "How do I find a bridge?" link and corresponding help text to the
    'Network' settings page.
  o Add a 'BrowserExecutable' configuration option to launch a Web browser
    when Tor has built a circuit, and exit Vidalia when the browser is closed.
    Patch from Steven J. Murdoch <http://www.cl.cam.ac.uk/users/sjm217/>.
  o Add 'ProxyExecutable' and 'ProxyExecutableArguments' configuration options
    to launch a proxy application with given parameters when Vidalia starts,
    and close it when Vidalia exits.
    Patches from Steven J. Murdoch <http://www.cl.cam.ac.uk/users/sjm217/>.
  o Respond to the Delete key in the network map by closing whatever circuits
    or streams are currently selected. Suggested by Andrew Lewman.
  o Rename the 'Relay' settings page to the 'Sharing' settings page.
  o Add a vidalia.desktop desktop entry file that can be installed with
    'make install'.
  o Add an Albanian GUI translation from Frederik Nosi.
  o Add a Hebrew GUI and Win32 installer translation.
  o Updated Finnish, Norwegian, Polish, Russian, and Swedish translations.


0.0.16  22-Nov-2007
  o Fix compilation on Mac OS X 10.3 (Panther).
  o GETCONF RelayBandwidthRate and RelayBandwidthBurst properly on Tor >=
    0.2.0.1-alpha. In 0.0.15, we were SETCONFing RelayBandwidthFoo when
    appropriate, but always GETCONFing BandwidthFoo. Fixes Ticket #298.